projects/api-python/k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  namespace: default
  labels:
    app: api-python
  name: api-python
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: api-python
  type: ClusterIP
